# slice-4d-shooter

./: .gitignore  CREDITS.md  Cargo.toml  README.md  build.rs  installer.iss
.VSCodeCounter/2024-03-15_12-01-20/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.cargo/: config.toml
.github/workflows/: deploy.yml
dll/: LICENSE.txt
game_server/: Cargo.toml
game_server/src/: client_server_protocol.rs  main.rs  matchmaking-server-config.json
matchbox_signaling_modified/: Cargo.toml  NOTICE
matchbox_signaling_modified/src/topologies/: client_server.rs
matchmaking_server/: Cargo.toml
matchmaking_server/src/: main.rs  matchmaking-server-config.json  matchmaking_server_protocol.rs  max-game-sessions-dynamic-config.json
nginx_proxy_config/: 4dshooter.conf
pkg/: index.html
src/: actor.rs  client_main.rs  engine.rs  game_client_for_2d_3d_example_fast_main.rs  game_client_for_2d_3d_example_main.rs  game_client_generated_shader_main.rs  game_client_main.rs  game_client_main_for_map_editing.rs  game_client_main_web.rs  game_client_main_with_windows_command_line.rs  game_client_main_without_autoupdate.rs  game_client_main_without_winsparkle.rs  game_client_observer_main.rs  game_client_observer_main_for_map_editing.rs  game_client_web.rs  game_server_main.rs  headless_game_client_main_for_net_test.rs  lib.rs  main.rs  main_loop.rs  matchmaking-server-main.rs  matchmaking_server_main.rs  matchmaking_server_protocol.rs  obstacle_course_free_movement_fast_main.rs  obstacle_course_free_movement_main.rs  obstacle_course_two_jumps_main.rs  raymarch_shader_generator.rs  read_args.rs  server_main.rs  transform.rs  winsparkle.rs
src/actor/: device.rs  devices.rs  diamond.rs  droped_rotator_tool.rs  final_trigger.rs  flag.rs  flag_base.rs  hole.rs  holegun_hole.rs  holegun_miss.rs  holegun_shot.rs  machinegun_shot.rs  main_player.rs  move_w_bonus.rs  mover_w.rs  new_spawn_area.rs  observer.rs  obstacle_course_free_movement_player.rs  obstacle_course_player_two_jumps.rs  obstaclesgun_shot.rs  player.rs  player_for_2d_3d_example.rs  players_death_explode.rs  players_death_explosion.rs  players_doll.rs  projectiles.rs  session_controller.rs  shooting_impact.rs  shotgun_laser_shot.rs  shotgun_shot_source.rs  trgger_orb.rs  trigger.rs  triggering_special_lift.rs  triggering_wandering_actor.rs  wandering_actor.rs  wave.rs
src/actor/device/: holegun.rs  machinegun.rs  obstaclesgun.rs  rotator.rs  shotgun.rs
src/actor/main_player/: player_inner_state.rs  player_input_master.rs  player_settings.rs
src/actor/player/: player_inner_state.rs  player_input_master.rs  player_settings.rs
src/assets/: mod.rs
src/assets/maps/: a_abbyss.json  a_bug_or_feature.json  a_figures.json  a_hello_world.json  a_obstacles.json  a_panopticum.json  a_slide.json  a_stairway.json  a_techno_demo.json  a_test_level.json  a_test_level_2.json  a_uncertainty.json  dev_map.json  empty_map.json  example_map.json  level-4-with-hole.json  level-4.json  level_1.json  m1_stairs.json  map-1.json  map-2.json  map-3-1.json  map-3.json  map-3d-to-4d.json  map-4-1.json  map-4-3.json  map-4-4.json  map-big-jump.json  map-first.json  map.json  map_1v1_current.json  map_1v1_save.json  map_1v1_v1.json  map_1v1_v2.json  map_2d_3d copy.json  map_2d_3d.json  map_2d_3d_first.json  map_3v3_heavy.json  map_a.json  map_for_first_part_of_video_prev_test.json  (+13 more)
src/assets/maps/levels_for_puzzle/: level-1.json  level-2.json  level-3.json  level-4.json  map.json
src/assets/maps/obstacle_course_levels/: level-1.json  level-2.json  level-3-alt.json  level-3.json  level-4.json  level-5.json  level-6.json
src/assets/maps/old_maps_archive/: a_berries.json  a_cube.json  a_hello_world_2.json  a_scale_prototype.json  a_tony_hawk_experience_prototype.json  a_tower.json  a_wormhole.json  level_2.json  level_3.json  level_4.json  level_5.json  map_1v1_v2.json  map_ctf.json  map_for_first_part_of_video_prev_test.json
src/assets/settings/: settings.json  settings2.json
src/assets/sky_boxes/star_sky/: resize_png.sh
src/assets/sounds/: linceses.txt
src/client_systems/: engine.rs  input_system.rs  main_loop.rs  mod.rs  player_avatar.rs  render_system.rs
src/client_systems/render_system/: renderer.rs
src/common_systems/: actions.rs  mod.rs  net_system.rs  physics_system.rs  timeSystem.rs  transform.rs
src/common_systems/physics_system/: collisions.rs
src/engine/: audio.rs  effects.rs  engine_handle.rs  input.rs  net.rs  physics.rs  render.rs  settings.rs  time.rs  ui.rs  world.rs
src/engine/input/: action.rs
src/engine/net/: net_protocols.rs
src/engine/physics/: area.rs  colliders_container.rs  common_physical_functions.rs  dynamic_collider.rs  kinematic_collider.rs  physics_system_data.rs  sdf_functions.rs  static_collider.rs
src/engine/render/: camera.rs  raymarch_shader_generator.rs  render_data.rs  renderer.rs  ui_renderer.rs
src/engine/render/render_data/: dynamic_render_data.rs  static_render_data.rs
src/engine/render/shaders/: frag.spv  frag_2.spv  generated_raymarch_shader.wgsl  image_shader.wgsl  main_shader.wgsl  main_shader_bad_opt.wgsl  progress_bar_shader.wgsl  raymarch_shader.wgsl  (+21 more)
src/engine/world/: level.rs  static_object.rs
src/server_systems/: devices.rs  engine.rs  engine_handle.rs  mod.rs  player.rs  projectiles.rs  world_system.rs
src/systems/: actions.rs  actor.rs  devices.rs  effects.rs  engine.rs  engine_handle.rs  input.rs  main_loop.rs  mod.rs  net.rs  physics.rs  player.rs  player_input_master.rs  projectiles.rs  render.rs  static_obj.rs  time.rs  transform.rs  world.rs
src/systems/actor/: diamond.rs  player.rs  projectiles.rs  wandering_actor.rs
src/systems/input/: action.rs
src/systems/physics/: area.rs  collider.rs  colliders_container.rs  collisions.rs  dynamic_collider.rs  kinematic_collider.rs  physical_element.rs  physics_system_data.rs  sdf_functions.rs  static_collider.rs
src/systems/player/: player_settings.rs
src/systems/render/: render_data.rs  renderer.rs
src/systems/world/: level.rs  map.rs  static_object.rs
(+5 files in other folders)
