workspace = { members = [ "game_server", "matchmaking_server", "matchbox_signaling_modified"] }
[package]
name = "slice-4d-shooter"
version = "0.4.4"
edition = "2021"

[dependencies]

matchmaking_server = { path = "./matchmaking_server" }
game_server = { path = "./game_server" }
env_logger = "0.11.8"
winit = {version = "0.30.11", features = ["rwh_05"]}
windows-sys = {version = "0.45.0", features = ["Win32", "Win32_Media"]}
wgpu = { version = "26.0.1" }
bytemuck = { version = "1.23.1", features = [ "derive" ] }
pollster = "0.4.0"
tokio = "1.46.1"
tokio-tungstenite = "0.26.2"
web-time = "0.2.4"
glam = "0.30.4"
rand = "0.8.5"
blink-alloc = "0.3.1"
fyrox-sound = "0.36.2"
fyrox-resource = "0.36.2"
fyrox-core = "0.36.2"
image = "0.25.6"
log = "0.4.27"
serde_json = "1.0.140"
alkahest = { version = "0.3.0", features = [ "derive" ] }
bincode = "1.3.3"
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
getrandom = { version = "0.2.16", features = [ "js" ] }
matchbox_socket = "0.12.0"
rustc-hash = "1.1.0"
opener = "0.8.2"
web-sys = { version = "0.3.77", features = [
    "Document",
    "Window",
    "Element",
    "console",
    "Performance",
    "Response"
]}


[lib]
name="game_client_main_web"
path = "src/game_client_main_web.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name="game-client"
path="src/game_client_main.rs"

[[bin]]
name="game-client-for-map-editing"
path="src/game_client_main_for_map_editing.rs"

[[bin]]
name="game-client-2d-3d-example"
path="src/game_client_for_2d_3d_example_main.rs"

[[bin]]
name="game-client-2d-3d-example-fast"
path="src/game_client_for_2d_3d_example_fast_main.rs"

[[bin]]
name="game-client-observer"
path="src/game_client_observer_main.rs"

[[bin]]
name="game-client-observer-for-map-editing"
path="src/game_client_observer_main_for_map_editing.rs"

[[bin]]
name="headless-game-client-for-net-test"
path="src/headless_game_client_main_for_net_test.rs"

[[bin]]
name="raymarch_shader_generator"
path="src/raymarch_shader_generator.rs"

resolver = "2"