workspace = { members = [ "game_server", "matchmaking_server", "matchbox_signaling_modified"] }
[package]
name = "slice-4d-shooter"
version = "0.5.0"
edition = "2021"

[dependencies]

matchmaking_server = { path = "./matchmaking_server" }
game_server = { path = "./game_server" }
env_logger = "*"
winit = {version = "*", features = ["rwh_05"]}
windows-sys = {version = "*", features = ["Win32", "Win32_Media"]}
wgpu = { version = "*" }
bytemuck = { version = "*", features = [ "derive" ] }
pollster = "*"
tokio = "*"
tokio-tungstenite = "*"
web-time = "*"
glam = "*"
rand = "*"
blink-alloc = "*"
fyrox-sound = "*"
fyrox-resource = "*"
fyrox-core = "*"
image = "*"
log = "*"
serde_json = "*"
alkahest = { version = "*", features = [ "derive" ] }
bincode = "*"
console_error_panic_hook = "*"
console_log = "*"
wasm-bindgen = "*"
wasm-bindgen-futures = "*"
getrandom = { version = "*", features = [ "js" ] }
matchbox_socket = "0.12.0"
rustc-hash = "*"
opener = "*"
web-sys = { version = "*", features = [
    "Document",
    "Window",
    "Element",
    "console",
    "Performance",
    "Response"
]}
winresource = "0.1.23"


[lib]
name="game_client_main_web"
path = "src/game_client_main_web.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name="game-client"
path="src/game_client_main.rs"

[[bin]]
name="game-client-for-map-editing"
path="src/game_client_main_for_map_editing.rs"

[[bin]]
name="game-client-2d-3d-example"
path="src/game_client_for_2d_3d_example_main.rs"

[[bin]]
name="game-client-2d-3d-example-fast"
path="src/game_client_for_2d_3d_example_fast_main.rs"

[[bin]]
name="game-client-observer"
path="src/game_client_observer_main.rs"

[[bin]]
name="game-client-observer-for-map-editing"
path="src/game_client_observer_main_for_map_editing.rs"

[[bin]]
name="headless-game-client-for-net-test"
path="src/headless_game_client_main_for_net_test.rs"

[[bin]]
name="raymarch_shader_generator"
path="src/raymarch_shader_generator.rs"

resolver = "2"

[build-dependencies]
winresource = "0.1.23"
