# Slice 4D Shooter - the first multiplayer shooter set in 4D space
# Copyright (C) 2023-2025  Timofei Molokov

# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU Affero General Public License as
# published by the Free Software Foundation, either version 3 of the
# License, or (at your option) any later version.

# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU Affero General Public License for more details.

# You should have received a copy of the GNU Affero General Public License
# along with this program.  If not, see <https://www.gnu.org/licenses/>.

workspace = { members = [ "game_server", "matchmaking_server", "matchbox_signaling_modified"] }
[package]
name = "slice-4d-shooter"
edition = "2021"
license = "AGPL-3.0"
license-file = "LICENSE.txt"
authors = ["Timofei Molokov"]


###
### When the version is changed (the counter is increased), 
### Windows game clients are updated worldwide for players.

version = "0.5.3"

###
###
###


[dependencies]

matchmaking_server = { path = "./matchmaking_server" }
game_server = { path = "./game_server" }
env_logger = "*"
winit = {version = "*", features = ["rwh_05"]}
windows-sys = {version = "*", features = ["Win32", "Win32_Media"]}
wgpu = { version = "*" }
bytemuck = { version = "*", features = [ "derive" ] }
pollster = "*"
tokio = "*"
tokio-tungstenite = "*"
web-time = "*"
glam = "*"
rand = "*"
blink-alloc = "*"
fyrox-sound = "*"
fyrox-resource = "*"
fyrox-core = "*"
image = "*"
log = "*"
serde_json = "*"
alkahest = { version = "*", features = [ "derive" ] }
bincode = "*"
console_error_panic_hook = "*"
console_log = "*"
wasm-bindgen = "*"
wasm-bindgen-futures = "*"
getrandom = { version = "*", features = [ "js" ] }
matchbox_socket = "0.12.0"
rustc-hash = "*"
opener = "*"
web-sys = { version = "*", features = [
    "Document",
    "Window",
    "Element",
    "console",
    "Performance",
    "Response"
]}
winresource = "0.1.23"
libloading = "0.8"


[lib]
name="game_client_main_web"
path = "src/game_client_main_web.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name="game-client"
path="src/game_client_main.rs"

[[bin]]
name="game-client-for-map-editing"
path="src/game_client_main_for_map_editing.rs"

[[bin]]
name="game-client-2d-3d-example"
path="src/game_client_for_2d_3d_example_main.rs"

[[bin]]
name="game-client-2d-3d-example-fast"
path="src/game_client_for_2d_3d_example_fast_main.rs"

[[bin]]
name="game-client-observer"
path="src/game_client_observer_main.rs"

[[bin]]
name="game-client-observer-for-map-editing"
path="src/game_client_observer_main_for_map_editing.rs"

[[bin]]
name="game-client-with-windows-command-line"
path="src/game_client_main_with_windows_command_line.rs"

[[bin]]
name="game-client-without-autoupdate"
path="src/game_client_main_without_autoupdate.rs"

[[bin]]
name="raymarch_shader_generator"
path="src/raymarch_shader_generator.rs"

resolver = "2"

[build-dependencies]
winresource = "0.1.23"
