[package]
name = "game_server"
version = "0.1.2"
edition = "2021"

[dependencies]
tokio = { version = "1.46.1", features = [ "process", "sync", "time", "rt" ] }
tokio-tungstenite = "0.26.2"
fyrox-core = "0.36.2"
alkahest = { version = "0.3.0", features = [ "derive" ] }
serde_json = "1.0.140"
matchmaking_server = { path = "../matchmaking_server" }
matchbox_signaling = { path = "../matchbox_signaling_modified" }
matchbox_socket = "0.12.0"
rand = "0.8.5"
glam = "0.30.4"
blink-alloc = "0.3.1"

async-trait = "*"
axum = "*"
futures = "*"
futures-timer = "*"
matchbox_protocol = "*"
tracing = "*"

[lib]
name = "client_server_protocol"
path = "src/client_server_protocol.rs"
doc = false
crate-type = ["lib"]