[package]
name = "game_server"
version = "0.4.5"
edition = "2021"

[dependencies]
tokio = { version = "*", features = [ "process", "sync", "time", "rt" ] }
tokio-tungstenite = "*"
fyrox-core = "*"
alkahest = { version = "*", features = [ "derive" ] }
serde_json = "*"
matchmaking_server = { path = "../matchmaking_server" }
matchbox_signaling = { path = "../matchbox_signaling_modified" }
matchbox_socket = "0.12.0"
rand = "*"
glam = "*"
blink-alloc = "*"

[lib]
name = "client_server_protocol"
path = "src/client_server_protocol.rs"
doc = false
crate-type = ["lib"]