[package]
name = "matchmaking_server"
author = "maffi44"
version = "0.1.2"
edition = "2021"

[dependencies]
tokio = { version = "*", features = [ "process", "sync", "time", "rt" ] }
tokio-tungstenite = "*"
fyrox-core = "*"
alkahest = { version = "*", features = [ "derive" ] }
serde_json = "*"

[lib]
name = "matchmaking_server_protocol"
path = "src/matchmaking_server_protocol.rs"
doc = false
crate-type = ["lib"]

