[package]
name = "matchmaking_server"
version = "0.1.2"
edition = "2021"

[dependencies]
tokio = { version = "1.46.1", features = [ "process", "sync", "time", "rt", "fs" ] }
tokio-tungstenite = "0.26.2"
fyrox-core = "0.36.2"
alkahest = { version = "0.3.0", features = [ "derive" ] }
serde_json = "1.0.140"

[lib]
name = "matchmaking_server_protocol"
path = "src/matchmaking_server_protocol.rs"
doc = false
crate-type = ["lib"]

