[package]
name = "matchmaking_server"
version = "0.2.0"
edition = "2021"

[dependencies]
tokio = { version = "*", features = [ "process", "sync", "time", "rt", "fs" ] }
tokio-tungstenite = "*"
fyrox-core = "*"
alkahest = { version = "*", features = [ "derive" ] }
serde_json = "*"

[lib]
name = "matchmaking_server_protocol"
path = "src/matchmaking_server_protocol.rs"
doc = false
crate-type = ["lib"]

